# Alpenite

./: CMakeLists.txt  CMakePresets.json
apps/webgpu_app/: App.cpp  ImGuiManager.cpp  ImGuiManager.h  RenderingContext.cpp  RenderingContext.h
apps/webgpu_app/ui/: RenderGraphPanel.cpp  RenderGraphPanel.h
demo_apps/alpenite_app/: AlpUtils.h  CMakeLists.txt  ClusteredMesh.cpp  ClusteredMesh.h  Framework.cpp  FrameworkSubsystem.h  Renderer.cpp  Renderer.h  main.cpp
docs/: rendergraph.md
unittests/webgpu_engine/: test_RenderGraph.cpp
webgpu/: CMakeLists.txt
webgpu/base/: CMakeLists.txt  RenderGraph.cpp  RenderGraph.h  RenderGraph_internal.h
